# hand_detector

./: .clang-format  .gitignore  CMakeLists.txt  main.c  webcam_test.c
memory/: CMakeLists.txt  ds_arena.c
memory/include/: ds_arena.h
python_version/: main.py  requirements.txt
scripts/: conver_egohands.py  convert_coco_negatives.py  convertor.py
src/: augmentation.c  bn_fold.c  checkpoint.c  dataloader.c  inference.c  layers.c  loss.c  network.c  optimizer.c  preprocess.c  tensor.c
src/include/: augmentation.h  bn_fold.h  checkpoint.h  dataloader.h  inference.h  layers.h  loss.h  network.h  optimizer.h  preprocess.h  tensor.h
tests/: test_augmentation.c  test_bn_fold.c  test_checkpoint.c  test_dataloader.c  test_inference.c  test_layers.c  test_loss.c  test_network.c  test_preprocess.c  test_tensor.c
